--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,5 +1,9 @@
 body,
-h2 {
+h2,
+h5,
+ul,
+a,
+li {
   padding: 0;
   margin: 0;
 }
@@ -7,10 +11,15 @@ h2 {
 html,
 body,
 #app {
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  color: #333;
 }
 
-.el-table{
-  width:99.9% !important;
+ul,li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
